@@ -1,3 +1,14 @@
+2000-02-10  Nick Clifton  <nickc@cygnus.com>
+
+	* mcore-opc.h (enum mcore_opclass): Add MULSH and OPSR
+	classes.
+	(mcore_table): Add "idly4", "psrclr", "psrset", "mulsh" and
+	"mulsh.h" instructions.
+	* mcore-dis.c (imsk array): Add masks for MULSH and OPSR
+	classes.
+	(print_insn_mcore): Add support for little endian targets.
+	Add support for MULSH and OPSR classes.
+
 2000-02-07  Nick Clifton  <nickc@cygnus.com>
 
 	* arm-dis.c (parse_arm_diassembler_option): Rename again.
